objects/Advitya_Test__c.object
<CustomObject>
    <fields>
        <fullName>Check_box__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check box</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Time__c</fullName>
        <label>Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Geolocation__c</fullName>
        <label>Geolocation</label>
        <scale>1</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Gopal_del__c</fullName>
        <label>Gopal</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Advitya Tests</relationshipLabel>
        <relationshipName>Advitya_Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent__c</fullName>
        <label>Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Picklist_Multi__c</fullName>
        <label>Picklist Multi</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist__c</fullName>
        <label>Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Type 1</fullName>
                </value>
                <value>
                    <fullName>Type 2</fullName>
                </value>
                <value>
                    <fullName>Type 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <label>Salary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Temp__c</fullName>
        <label>Temp</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_Area__c</fullName>
        <label>Text Area</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Text_Area_long__c</fullName>
        <label>Text Area long</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <label>Text</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Advitya Test</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Company__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Advitya Test Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Advitya Tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>